src/test/resources/errors/WelldefinednessError2.mch
MACHINE WelldefinednessError2
VARIABLES x
INVARIANT x : 1..10
INITIALISATION x := %x.(x = 1 | 1)(2)
END